--- a/src/_includes/_footer.html
+++ b/src/_includes/_footer.html
@@ -5,7 +5,7 @@
         {% include function.maintainers.html %}
       </p>
       <p class="is-size-6"><span class="has-text-weight-bold">Support</span> {{ site.title }}</p>
-      <p><span class="has-text-weight-bold is-size-7">Visit our sponsor</span><br><a target="_blank" href="https://utensils.io" class="button is-inverted is-primary has-text-weight-bold is-medium">utensils.io</a></p>
+      <p><span class="has-text-weight-bold is-size-7">Visit our sponsor</span><br><a target="_blank" href="https://feverbranch.com" class="button is-inverted is-primary has-text-weight-bold is-medium">FEVERBRANCH</a></p>
     </div>
   </div>
 </footer>
