--- a/src/_includes/_nav.html
+++ b/src/_includes/_nav.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar has-shadow is-spaced">
+<nav id="navbar" class="navbar">
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="/"><span class="icon"><i class="fas fa-fw fa-adjust"></i></span>&nbsp;<h1 class="title is-5">{{ site.title }}</h1></a>
@@ -19,7 +19,7 @@
             <a class="navbar-item" href="/"><span class="has-text-weight-bold">Page 2</span></a>
           </div>
         </div>
-        <a class="navbar-item" href="/">About</a>
+        <a class="navbar-item" href="/contact/">Contact</a>
       </div>
       <div class="navbar-end">
         <a class="navbar-item is-hidden-mobile" href="https://github.com/{{ site.github }}" target="_blank"><span class="icon has-text-grey-darker"><i class="fab fa-lg fa-github"></i></span></a>
